--- a/GG_Partners/Partners_StyShe.css
+++ b/GG_Partners/Partners_StyShe.css
@@ -1,7 +1,7 @@
 body {
-    background-color: black;
+    background-color: #212529;
     display:grid;
-    grid-template-rows: auto 1fr auto auto;
+    grid-template-rows: auto 1fr auto 3fr;
     grid-template-areas:
             "navBar"
             "header"
@@ -10,12 +10,18 @@ body {
 }
 header {
     grid-area: header;
-    background-color: red;
+    background-color: #212529;
+    color: white;
+    align-content: center;
+    text-align: center;
+    font-size: 150%;
+    font-family: sans-serif, 'Inter Semi Bold';
 }
 
 #partner-container {
     grid-area: cards;
-    background-color: gold;
+    background-color: #212529;
+    font-family: sans-serif, 'Segoe UI';
 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -25,12 +31,13 @@ header {
 
 /*Card Design*/
 .partner-card {
-    border: 1px solid #ccc;
+    border: 2px solid #5a189a;
+    color: white;
     border-radius: 8px;
     padding: 1em;
     margin-bottom: 1em;
     max-width: 300px;
-    background-color: palevioletred;
+    background-color: #343a40;
 }
 .partner-avatar {
     width: 100px;
