--- a/GG_Partners/Partners_StyShe.css
+++ b/GG_Partners/Partners_StyShe.css
@@ -38,6 +38,7 @@ header {
     margin-bottom: 1em;
     max-width: 300px;
     background-color: #343a40;
+    overflow: hidden;
 }
 .partner-avatar {
     width: 100px;
