--- a/.Important/indexStyShe.css
+++ b/.Important/indexStyShe.css
@@ -30,6 +30,8 @@ header {
 }
 
 #title {
+    display: flex;
+    flex-direction: column;
     background-color: rebeccapurple;
     align-content: center;
     align-items: center;
@@ -37,6 +39,7 @@ header {
     width: 25vw;
     height: 25vw;
     margin: auto;
+    padding: 1vw;
 }
 
 
@@ -66,6 +69,7 @@ main {
     grid-auto-flow: column;
     grid-auto-columns: 23%;
     column-gap: 30px;
+    padding: 1vw;
 
     overflow-x: auto;
     overscroll-behavior: contain;
