--- a/GG_Partners/Partners_StyShe.css
+++ b/GG_Partners/Partners_StyShe.css
@@ -1,5 +1,6 @@
 body {
     background-color: #212529;
+    font-family: "JetBrains Mono Medium", sans-serif;
     display:grid;
     grid-template-rows: auto 1fr auto 3fr;
     grid-template-areas:
@@ -8,6 +9,9 @@ body {
             "cards"
             "footer";
 }
+body h1, h2 {
+    font-family: Montserrat, sans-serif;
+}
 header {
     grid-area: header;
     background-color: #212529;
@@ -15,13 +19,12 @@ header {
     align-content: center;
     text-align: center;
     font-size: 150%;
-    font-family: sans-serif, 'Inter Semi Bold';
 }
 
 #partner-container {
     grid-area: cards;
     background-color: #212529;
-    font-family: sans-serif, 'Segoe UI';
+    font-family: sans-serif, 'JetBrains Mono Medium';
 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
