--- a/.Important/universal.css
+++ b/.Important/universal.css
@@ -13,8 +13,11 @@ nav {
     font-optical-sizing: auto;
     font-weight: 900;
     grid-area: navBar;
+    padding-bottom: 0.25vw;
+    padding-top: 0.25vw;
     position:sticky;
     top:0;
+    border-radius: 0 0 5px 5px;
 
     align-content: center;
     align-items: center;
@@ -33,8 +36,36 @@ nav {
 #WaifuCups_Nav {
     grid-area: cups;
 }
+
 #Consumables_Nav {
     grid-area: consumables;
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+}
+#Consumables_Nav li {
+    position: relative;
+}
+#Consumables_Nav a {
+    display: block;
+}
+#dropdownCons {
+    position: relative;
+}
+#dropdownContentCons {
+    display: none;
+    list-style: none;
+    position: absolute;
+    z-index: -1;
+    top: 100%;
+    left: 16%;
+}
+#dropdownContentCons li a {
+    padding: 0.75rem 1rem;
+    background-color: mediumpurple;
+}
+#dropdownCons:hover #dropdownContentCons {
+    display: block;
 }
 #Merch_Nav {
     grid-area: merch;
