--- a/Important/universal.css
+++ b/Important/universal.css
@@ -24,7 +24,7 @@ nav {
     text-align: center;
 
     display: grid;
-    grid-template-columns: repeat(7,auto);
+    grid-template-columns: 8vw repeat(6,auto);
     grid-template-areas:"logo cups consumables merch vcards partners searchBar";
 }
 
